--- a/src/components/Playlist.css
+++ b/src/components/Playlist.css
@@ -1,7 +1,5 @@
 .Playlist {
-    width: 320px;
-    height: 320px;
     display: grid;
     grid-gap: .8em;
-    grid-template-rows: 21px auto 1fr auto;
+    grid-template-rows: auto auto 1fr auto;
 }
