--- a/src/components/PopUp.css
+++ b/src/components/PopUp.css
@@ -1,3 +1,5 @@
 .PopUp {
-    display: flex;
+    display: grid;
+    grid-gap: .8em;
+    grid-template-rows: 320px;
 }
